--- a/dinabout.html
+++ b/dinabout.html
@@ -18,7 +18,7 @@
             <source src="vidina.mp4" type="video/mp4">
         </video>
         <div class="aboutbtn">
-            <a href="dinahome.html">
+            <a href="index.html">
                 <button class = "back"> Back</button>
             </a>
         </div>        
