--- a/dinacontact.html
+++ b/dinacontact.html
@@ -15,10 +15,6 @@
             <img src="logoinstagram.svg" alt="" style="height: 35px; ">
             <p>yudin152</p>
         </a>
-        <a class="kontakbtn" href="https://api.whatsapp.com/send/?phone=6282392002353&text&app_absent=0">
-            <img src="logowhatsapp.svg" alt="" style="height: 35px; ">
-            <p>082392002353</p>
-        </a>
         <a class="kontakbtn" href="https://open.spotify.com/user/31rxbixfpxdoslydm7v46k53rmym">
             <img src="logospotify.svg" alt="" style="height: 35px; ">
             <p>lymeow</p>
@@ -33,7 +29,7 @@
         </a>
     </div> 
     <div class="contactbtn">
-        <a href="dinahome.html">
+        <a href="index.html">
             <button class = "back">Back</button>
         </a>
     </div>
